k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gbc-app-service
spec:
  selector:
    app: gbc-app
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
